# claude-tools

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  HOMEBREW_INSTALL.md  INSTALLATION.md  INTEGRATION_EDGE_CASES.md  INTEGRATION_TESTED.md  LICENSE  README.md  TECHFLOW_DEMO.md  TESTS_THAT_WOULD_HAVE_CAUGHT_THE_BUG.md  claude-tasker  claude-tasker-py  claude-tasker.old  claude-tasker.rb  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_python_integration.py  test_verification.md
.claude-tasker/handoff/: 20250826_234446.test_op_123.json  20250827_045123.test_op_123.json  README.md
.github/: pull_request_template.md
.github/workflows/: homebrew-test.yml  release.yml  techflow-tests.yml  test.yml
archive/bash_implementation/: README.md  claude-agent-poc.agent  claude-tasker  claude_tasker.py
docs/: debug_logging_enhancements.md  techflow-test-framework.md
docs/architecture/: branch_management.md  prompt-bug-analysis.md  prompt-feature-request.md  prompt-issue-implementation.md  prompt-pr-review.md  techflow-implementation-issue.md  techflow-troubleshooting.md
docs/development/: DEBUGGING_SUMMARY.md  logging-integration.md
docs/testing/: EDGE_CASE_PRIORITIES.md  EDGE_CASE_TEST_RESULTS.md  REMAINING_TESTS.md  TDD_ANALYSIS.md
examples/: debug_logging_demo.py
homebrew-test/Formula/: claude-tasker.rb
src/claude_tasker/: __init__.py  __main__.py  base.py  branch_manager.py  cli.py  environment_validator.py  (+8 more)
tests/: COVERAGE_REPORT.md  README.md  UPDATED_COVERAGE_REPORT.md  __init__.py  conftest.py  pytest.ini  test_argument_parsing.py  test_base.py  test_branch_manager.py  test_cli.py  test_cli_extended.py  test_command_flags.py  test_commands.md  test_contract_no_subprocess.py  test_coverage_improvements.py  test_critical_edge_cases.py  test_environment_validation.py  test_environment_validator.py  test_git_operations.py  test_github_cli.py  test_github_client.py  test_handoff_cli.py  test_handoff_models.py  test_handoff_planner.py  test_handoff_validator.py  test_integration.py  test_integration_comprehensive.py  test_logging_config.py  test_logging_enhancements.py  test_pr_body_generator.py  test_pr_body_generator_extended.py  test_prompt_builder.py  test_prompt_builder_extended.py  test_prompt_builder_extended.py.backup  test_python_cli_wrapper.py  test_python_implementations.py  test_real_execution_integration.py  test_services_command_executor.py  test_services_gh_service.py  test_services_git_service.py  (+7 more)
(+31 files in other folders)
